Tryna fix overflow

--- a/public/menu.css
+++ b/public/menu.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 /* .menu-items {
